--- a/res/values-ru/h_strings.xml
+++ b/res/values-ru/h_strings.xml
@@ -130,5 +130,22 @@
     <string name="introduce_time">УСТАНОВИТЬ ВРЕМЯ РОЖДЕНИЯ</string>
     <string name="introduce_time_1">*эти данные использует только goroskop.ru</string>
     <string name="notice_url">http://brothers-rovers.3dn.ru/help6.0.ru.html</string>
+    <string name="trial_until">Пробный до</string>
+    <string name="trial_buyed">Неогранниченное время на пользавание приложением</string>
+
+    <string-array name="moths_of_year">
+        <item>Января</item>
+        <item>Февраля</item>
+        <item>Марта</item>
+        <item>Апреля</item>
+        <item>Мая</item>
+        <item>Июня</item>
+        <item>Июля</item>
+        <item>Августа</item>
+        <item>Сентября</item>
+        <item>Октября</item>
+        <item>Ноября</item>
+        <item>Декабря</item>
+    </string-array>
 
 </resources>
