--- a/res/values-ru/h_strings.xml
+++ b/res/values-ru/h_strings.xml
@@ -132,6 +132,18 @@
     <string name="notice_url">http://brothers-rovers.3dn.ru/help6.0.ru.html</string>
     <string name="trial_until">Пробный до</string>
     <string name="trial_buyed">Неогранниченное время на пользавание приложением</string>
+    <string name="trial_title">Ваш пробный период для этого приложения закончился </string>
+    <string name="trial_byu_google">Купить приложение</string>
+    <string name="trial_byu_google_desc_high">Вы получите неогранниченное время на пользавание приложением</string>
+    <string name="trial_get_thr">Оцени меня!</string>
+    <string name="trial_get_thr_desc">Вы получите 30 дней на пользование</string>
+    <string name="trial_get_share">Поделиться приложением</string>
+    <string name="trial_get_share_desc">Вы получите 15 дней на пользование</string>
+    <string name="trial_byu_google_desc">Вы получите 182 дня на пользование</string>
+    <string name="trial_price_paid">29руб.</string>
+    <string name="trial_price_paid_high">99руб.</string>
+    <string name="trial_price_free">БЕСПЛ.</string>
+    <string name="trial_get_share_intent">Рекомендую!</string>
 
     <string-array name="moths_of_year">
         <item>Января</item>
