--- a/res/values/h_dimens.xml
+++ b/res/values/h_dimens.xml
@@ -6,5 +6,7 @@
     <dimen name="slider_menu_custom_padding">8dp</dimen>
     <dimen name="intro_def_padd">240dp</dimen>
     <dimen name="intro_def_padd2">360dp</dimen>
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
 
 </resources>
