--- a/res/values/h_strings.xml
+++ b/res/values/h_strings.xml
@@ -305,6 +305,7 @@
     <string name="introduce_time">SET BIRTH TIME</string>
     <string name="introduce_time_1">*this value used only goroskop.ru</string>
     <string name="notice_url">http://brothers-rovers.3dn.ru/help6.0.eng.html</string>
+    <string name="trial_period">Trial period</string>
     <string name="trial_until">Trial until</string>
     <string name="trial_buyed">Infinite time to use</string>
     <string name="trial_title">Your trial period has ended for this application</string>
