--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -60,6 +60,12 @@
             android:key="preference_locales"
             android:summary="@string/preference_locale_2"
             android:title="@string/preference_locale_1" />
+        <Preference
+            android:id="@+id/preference_trial"
+            android:icon="@drawable/logo_trial"
+            android:key="preference_trial"
+            android:summary="@string/trial_until"
+            android:title="@string/trial_period" />
     </PreferenceCategory>
 
 </PreferenceScreen>
