adding providers link to about menu

--- a/res/values-ru/h_strings.xml
+++ b/res/values-ru/h_strings.xml
@@ -93,6 +93,19 @@
     <string name="libraries_billing_1">Android In-App Billing v3</string>
     <string name="libraries_billing_2">github.com/anjlab/android-inapp-billing-v3</string>
     <string name="libraries_billing_url">https://github.com/anjlab/android-inapp-billing-v3</string>
+    <string name="providers_base">Провайдеры</string>
+    <string name="providers_mail_1">\@Mail Ru</string>
+    <string name="providers_mail_2">horo.mail.ru</string>
+    <string name="providers_mail_url">http://horo.mail.ru/</string>
+    <string name="providers_goroskop_1">Гороскоп\@RU</string>
+    <string name="providers_goroskop_2">goroskop.ru</string>
+    <string name="providers_goroskop_url">http://www.goroskop.ru/</string>
+    <string name="providers_horoscope_1">Horoscope*com</string>
+    <string name="providers_horoscope_2">horoscope.com</string>
+    <string name="providers_horoscope_url">http://www.horoscope.com/</string>
+    <string name="providers_celebrity_1">Yahoo Celebrity</string>
+    <string name="providers_celebrity_2">celebrity.yahoo.com</string>
+    <string name="providers_celebrity_url">https://celebrity.yahoo.com/horoscope/</string>
     <string name="preference">Настройки</string>
     <string name="preference_base">Основные</string>
     <string name="preference_date_1">Дата вашего рождения</string>
