--- a/res/values/h_strings.xml
+++ b/res/values/h_strings.xml
@@ -265,6 +265,22 @@
     <string name="libraries_pulltorefresh_1">PullToRefresh</string>
     <string name="libraries_pulltorefresh_2">github.com/chrisbanes/ActionBar-PullToRefresh</string>
     <string name="libraries_pulltorefresh_url">https://github.com/chrisbanes/ActionBar-PullToRefresh</string>
+    <string name="libraries_billing_1">Android In-App Billing v3</string>
+    <string name="libraries_billing_2">github.com/anjlab/android-inapp-billing-v3</string>
+    <string name="libraries_billing_url">https://github.com/anjlab/android-inapp-billing-v3</string>
+    <string name="providers_base">Providers</string>
+    <string name="providers_mail_1">\@Mail Ru</string>
+    <string name="providers_mail_2">horo.mail.ru</string>
+    <string name="providers_mail_url">http://horo.mail.ru/</string>
+    <string name="providers_goroskop_1">Гороскоп\@RU</string>
+    <string name="providers_goroskop_2">goroskop.ru</string>
+    <string name="providers_goroskop_url">http://www.goroskop.ru/</string>
+    <string name="providers_horoscope_1">Horoscope*com</string>
+    <string name="providers_horoscope_2">horoscope.com</string>
+    <string name="providers_horoscope_url">http://www.horoscope.com/</string>
+    <string name="providers_celebrity_1">Yahoo Celebrity</string>
+    <string name="providers_celebrity_2">celebrity.yahoo.com</string>
+    <string name="providers_celebrity_url">https://celebrity.yahoo.com/horoscope/</string>
     <string name="preference">Settings</string>
     <string name="preference_base">Base</string>
     <string name="preference_date_1">Your birth date</string>
