--- a/res/values-ru/h_strings.xml
+++ b/res/values-ru/h_strings.xml
@@ -159,7 +159,9 @@
     <string name="trial_price_paid_high">99руб.</string>
     <string name="trial_price_free">БЕСПЛ.</string>
     <string name="trial_get_share_intent">Рекомендую!</string>
-
+    <string name="clickable_string">Продолжая, вы принимаете условия нашего [пользавательского соглашения]</string>
+    <string name="agreement_top">Соглашение:</string>
+    <string name="agreement">Для пользователей:\n • Я согласен, что приложение выполняет функцию обычного интернет браузера\n • Я согласен бесплатно использовать приложение только в случае, если буду делиться контентом не реже 1 раза в неделю\n • Я согласен, что контент предоставляют сторонние интернет-сайты, и ничего против содержимого не имею\n\nДля правообладателей:\n • Я согласен, что приложение выполняет функцию обычного интернет браузера\n • Если эта информация принадлежит мне, и я не хочу, чтобы она свободно распространялась, я обязуюсь лично попытаться удалить эту информацию с сайтов, которые может открывать данный интернет-браузер\n • Если я не имею возможности удалить информацию с сайта я обязуюсь связаться с разработчиком данного приложения для переговоров об удалении возможности считывать информацию которая принадлежит мне, правообладателю\n\nКонтакты:\n • Роман Гаитбаев\n • romzesrover@gmail.com\n • vk.com/romzesrover</string>
     <string-array name="moths_of_year">
         <item>Января</item>
         <item>Февраля</item>
