--- a/res/values-ru/h_strings.xml
+++ b/res/values-ru/h_strings.xml
@@ -145,6 +145,8 @@
     <string name="introduce_date_check">Проверьте правильность введенных данных</string>
     <string name="introduce_time">УСТАНОВИТЬ ВРЕМЯ РОЖДЕНИЯ</string>
     <string name="introduce_time_1">*эти данные использует только goroskop.ru</string>
+    <string name="introduce_show_devices">Читайте разные гороскопы в одном приложении, на разных устройствах!</string>
+    <string name="introduce_show_share">Делись гороскопами с друзьями в социальных сетях, и получай 7 дней на пользование приложением за каждый Share!</string>
     <string name="notice_url">http://brothers-rovers.3dn.ru/help6.0.ru.html</string>
     <string name="trial_period">Пробный период</string>
     <string name="trial_until">Пробный до</string>
