--- a/res/values/h_strings.xml
+++ b/res/values/h_strings.xml
@@ -235,7 +235,7 @@
     <string name="error_retry">Retry</string>
     <string name="about">About</string>
     <string name="about_base">Base</string>
-    <string name="about_base_version_2">version 6.0 beta</string>
+    <string name="about_base_version_2">version 6.0.3</string>
     <string name="about_base_creator_2">Roman Gaitbaev</string>
     <string name="about_base_publisher_2">play.google.com</string>
     <string name="about_base_version_1">Version</string>
