--- a/res/values/h_strings.xml
+++ b/res/values/h_strings.xml
@@ -433,11 +433,11 @@
     <string name="trial_buyed">Infinite time to use</string>
     <string name="trial_title">Your trial period has ended for this application</string>
     <string name="trial_byu_google">Buy this app</string>
-    <string name="trial_byu_google_desc_high">You\'ll get infinite time to use</string>
+    <string name="trial_byu_google_desc_high">An advertisement will turn off</string>
     <string name="trial_get_thr">Rate this app</string>
-    <string name="trial_get_thr_desc">You\'ll get 15 days to use</string>
-    <string name="trial_get_share">Share this app</string>
-    <string name="trial_get_share_desc">You\'ll get 7 days to use</string>
+    <string name="trial_get_thr_desc">You\'ll get 15 days to use w/o ad</string>
+    <string name="trial_get_ad">Resume using</string>
+    <string name="trial_get_ad_desc">An advertisement will turn on</string>
     <string name="trial_price_paid_high">$2.99</string>
     <string name="trial_price_free">FREE</string>
     <string name="trial_get_share_intent">I recommend!</string>
