some ui fixes if ad enabled

--- a/res/values-ru/h_strings.xml
+++ b/res/values-ru/h_strings.xml
@@ -152,6 +152,7 @@
     <string name="trial_period">Время до выбора</string>
     <string name="trial_until">Время до</string>
     <string name="trial_buyed">Реклама отключена</string>
+    <string name="trial_ad">Бесконечно, но реклама включена</string>
     <string name="trial_title">Пора сделать выбор </string>
     <string name="trial_byu_google">Купить приложение</string>
     <string name="trial_byu_google_desc_high">Вся реклама выключится</string>
