--- a/res/values-ru/h_strings.xml
+++ b/res/values-ru/h_strings.xml
@@ -57,7 +57,7 @@
         <item>Уведомление</item>
     </string-array>
 
-    <string name="app_name">Гороскоп 24/7</string>
+    <string name="app_name">Гороскоп браузер</string>
     <string name="error_message">Проверьте ваше подключение к сети, и попробуйте снова.</string>
     <string name="error_retry">Попробовать снова</string>
     <string name="about">О Приложении</string>
@@ -157,14 +157,14 @@
     <string name="trial_byu_google">Купить приложение</string>
     <string name="trial_byu_google_desc_high">Вся реклама выключится</string>
     <string name="trial_get_thr">Оцени меня!</string>
-    <string name="trial_get_thr_desc">Вы получите 15 дней на пользование без рекламы</string>
+    <string name="trial_get_thr_desc">Вы получите 7 дней на пользование без рекламы</string>
     <string name="trial_get_ad">Продолжить пользоваться приложением</string>
     <string name="trial_get_ad_desc">Включится реклама</string>
     <string name="trial_price_paid_high">99руб.</string>
     <string name="trial_price_free">БЕСПЛ.</string>
     <string name="clickable_string">Продолжая, вы принимаете условия нашего [пользавательского соглашения]</string>
     <string name="agreement_top">Соглашение:</string>
-    <string name="agreement">Для пользователей:\n • Я согласен, что приложение выполняет функцию обычного интернет браузера\n • Я согласен бесплатно использовать приложение только в случае, если буду делиться контентом не реже 1 раза в неделю\n • Я согласен, что контент предоставляют сторонние интернет-сайты, и ничего против содержимого не имею\n\nДля правообладателей:\n • Я согласен, что приложение выполняет функцию обычного интернет браузера\n • Если эта информация принадлежит мне, и я не хочу, чтобы она свободно распространялась, я обязуюсь лично попытаться удалить эту информацию с сайтов, которые может открывать данный интернет-браузер\n • Если я не имею возможности удалить информацию с сайта я обязуюсь связаться с разработчиком данного приложения для переговоров об удалении возможности считывать информацию которая принадлежит мне, правообладателю\n\nКонтакты:\n • Роман Гаитбаев\n • romzesrover@gmail.com\n • vk.com/romzesrover</string>
+    <string name="agreement">Для пользователей:\n • Я согласен, что приложение выполняет функцию обычного интернет браузера\n • Я согласен бесплатно использовать приложение только в случае, если включу рекламу в приложении\n • Я согласен, что контент предоставляют сторонние интернет-сайты, и ничего против содержимого не имею\n\nДля правообладателей:\n • Я согласен, что приложение выполняет функцию обычного интернет браузера\n • Если эта информация принадлежит мне, и я не хочу, чтобы она свободно распространялась, я обязуюсь лично попытаться удалить эту информацию с сайтов, которые может открывать данный интернет-браузер\n • Если я не имею возможности удалить информацию с сайта я обязуюсь связаться с разработчиком данного приложения для переговоров об удалении возможности считывать информацию которая принадлежит мне, правообладателю\n\nКонтакты:\n • Роман Гаитбаев\n • romzesrover@gmail.com\n • vk.com/romzesrover</string>
     <string-array name="moths_of_year">
         <item>Января</item>
         <item>Февраля</item>
