--- a/res/values/h_strings.xml
+++ b/res/values/h_strings.xml
@@ -428,10 +428,10 @@
     <string name="notice_url">http://brothers-rovers.3dn.ru/help6.1.eng.html</string>
     <string name="trial_period">Time until choose</string>
     <string name="trial_until">Time until</string>
-    <string name="trial_buyed">Ad is disabled</string>
+    <string name="trial_buyed">Infinite, advertisemen is disabled</string>
     <string name="trial_ad">Infinite, but ad is enabled</string>
     <string name="trial_title">Time to choose</string>
-    <string name="trial_byu_google">Buy this app</string>
+    <string name="trial_byu_google">Resume using and buy this app</string>
     <string name="trial_byu_google_desc_high">An advertisement will turn off</string>
     <string name="trial_get_thr">Rate this app</string>
     <string name="trial_get_thr_desc">You\'ll get 7 days to use w/o ad</string>
