--- a/res/values-ru/h_strings.xml
+++ b/res/values-ru/h_strings.xml
@@ -158,7 +158,7 @@
     <string name="trial_byu_google_desc_high">Вся реклама выключится</string>
     <string name="trial_get_thr">Оцени меня!</string>
     <string name="trial_get_thr_desc">Вы получите 7 дней на пользование без рекламы</string>
-    <string name="trial_get_ad">Продолжить пользоваться приложением</string>
+    <string name="trial_get_ad">Продолжить пользоваться</string>
     <string name="trial_get_ad_desc">Включится реклама</string>
     <string name="trial_price_paid_high">99руб.</string>
     <string name="trial_price_free">БЕСПЛ.</string>
